i have no idea what changes are made here

--- a/galois.tex
+++ b/galois.tex
@@ -143,6 +143,7 @@ Is this even possible to evaluate? Technically, yes -- if we let $u = (x + \omeg
 
 This first method is due to Vandermonde in 1770 (same guy whose name appears in the determinant in the previous section, and in Vandermonde's identity from combinatorics, but that's maybe it[?]), but Lagrange a little later towards the end of the 18th century (c. 1790) developed a better way using a similar idea.
 
+The main idea is largely the same -- evaluating a certain (very similar!) expression that is a linear combination of the roots involving coefficients of $\omega$ will allow us
 
 \section{Gauss and Cyclotomic Polynomials}
 We've been discussing the roots of unity when we introduced Lagrange resolvents as a new way to
